[package]
name = "isideload-cryptographic-message-syntax"
version = "0.28.0"
authors = ["Nicholas Sharp <nab@nabdev.me>"]
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "A pure Rust implementation of Crypographic Message Syntax (RFC 5652)"
keywords = ["cms", "rfc5652", "apple", "codesign"]
homepage = "https://github.com/nab138/isideload-cryptography-rs"
repository = "https://github.com/nab138/isideload-cryptography-rs.git"
readme = "README.md"

[dependencies]
aws-lc-rs = "1.15.4"
bcder = "0.7.6"
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false }
hex = "0.4.3"
pem = "3.0.6"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"], optional = true }
signature = { version = "2.2.0", features = ["std"] }
x509-certificate = { version = "0.25.0", features = ["test"], package = "isideload-x509-certificate" }

[features]
default = ["http"]
http = ["dep:reqwest"]
