[package]
name = "isideload-cryptographic-message-syntax"
version = "0.31.1"
authors = ["Nicholas Sharp <nab@nabdev.me>"]
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "A pure Rust implementation of Crypographic Message Syntax (RFC 5652)"
keywords = ["cms", "rfc5652", "apple", "codesign"]
homepage = "https://github.com/nab138/isideload-cryptography-rs"
repository = "https://github.com/nab138/isideload-cryptography-rs.git"
readme = "README.md"

[dependencies]
bcder = "0.7.6"
bytes = "1.11.1"
chrono = { version = "0.4.44", default-features = false }
hex = "0.4.3"
pem = "3.0.6"
ring = "0.17.14"
signature = { version = "2.2.0", features = ["std"] }
x509-certificate = { package="isideload-x509-certificate", path = "../x509-certificate", version = "0.26.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", default-features = false, features = [
  "js",
] }
getrandom_04 = { package = "getrandom", version = "0.4", default-features = false, features = [
  "wasm_js",
] }

[features]
default = ["http"]
http = []
wasm = ["ring/wasm32_unknown_unknown_js"]