[package]
name = "isideload-x509-certificate"
version = "0.25.0"
authors = ["Nicholas Sharp <nab@nabdev.me>"]
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "X.509 certificate parser and utility functionality"
keywords = ["x509", "cryptography", "pki"]
homepage = "https://github.com/nab138/isideload-cryptography-rs"
repository = "https://github.com/nab138/isideload-cryptography-rs.git"
readme = "README.md"

[features]
test = []

[dependencies]
aws-lc-rs = "1.15.4"
bcder = "0.7.6"
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
der = { version = "0.7.10", features = ["alloc", "zeroize"] }
hex = "0.4.3"
pem = "3.0.6"
signature = { version = "2.2.0", features = ["std"] }
spki = { version = "0.7.3", features = ["alloc"] }
thiserror = "2.0.17"
zeroize = { version = "1.8.2", features = ["derive"] }
