[package]
name = "isideload-x509-certificate"
version = "0.26.1"
authors = ["Nicholas Sharp <nab@nabdev.me>"]
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "X.509 certificate parser and utility functionality"
keywords = ["x509", "cryptography", "pki"]
homepage = "https://github.com/nab138/isideload-cryptography-rs"
repository = "https://github.com/nab138/isideload-cryptography-rs.git"
readme = "README.md"

[features]
test = []
wasm = ["ring/wasm32_unknown_unknown_js"]

[dependencies]
bcder = "0.7.6"
bytes = "1.11.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
der = { version = "0.7.10", features = ["alloc", "zeroize"] }
hex = "0.4.3"
pem = "3.0.6"
ring = "0.17.14"
signature = { version = "2.2.0", features = ["std"] }
spki = { version = "0.7.3", features = ["alloc"] }
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Forward `js`/`wasm_js` to transitive `getrandom` (uuid v4 needs it).
getrandom_02 = { package = "getrandom", version = "0.2", default-features = false, features = [
  "js",
] }
getrandom_04 = { package = "getrandom", version = "0.4", default-features = false, features = [
  "wasm_js",
] }